Adding open telemetry to API calls. (#513)
